Fix rich text overflow

--- a/src/static/stylesheets/media_properties/common.module.scss
+++ b/src/static/stylesheets/media_properties/common.module.scss
@@ -133,6 +133,10 @@
   font-size: 16px;
   gap: 0.8em;
 
+  * {
+    overflow: hidden;
+  }
+
   h1,
   h2,
   h3,
